fix spacing

--- a/portfolio-site/src/css/AppList.module.css
+++ b/portfolio-site/src/css/AppList.module.css
@@ -3,7 +3,7 @@
     width: 100%;
     display: flex;
     flex-flow: column nowrap;
-    gap: 2rem;
-    padding: 2rem;
+    gap: 4rem;
+    padding: 4rem 2rem;
     overflow-x: hidden;
 }
